[gd_scene load_steps=12 format=2]

[ext_resource path="res://anim/attack4.png" type="Texture" id=1]
[ext_resource path="res://anim/attack2.png" type="Texture" id=2]
[ext_resource path="res://anim/attack3.png" type="Texture" id=3]
[ext_resource path="res://anim/attack1.png" type="Texture" id=4]
[ext_resource path="res://anim/attack0.png" type="Texture" id=5]
[ext_resource path="res://sounds/simple_attack.ogg" type="AudioStream" id=6]
[ext_resource path="res://Scripts/arma.gd" type="Script" id=7]
[ext_resource path="res://inimigos/dano.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ null, ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), null ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.25, 6.85 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ null, ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ), null, ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[node name="arma" type="Node2D"]
script = ExtResource( 7 )

[node name="Normal" type="AnimatedSprite" parent="."]
scale = Vector2( 1.12, 2 )
frames = SubResource( 1 )
speed_scale = 1.2
offset = Vector2( 20, 0 )

[node name="Normal" type="Area2D" parent="Normal"]
position = Vector2( 21.2054, -0.125 )
collision_layer = 15
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Normal/Normal"]
visible = false
shape = SubResource( 2 )
disabled = true

[node name="Anormal" type="AnimatedSprite" parent="."]
scale = Vector2( 1.12, 2 )
frames = SubResource( 3 )
speed_scale = 1.2
offset = Vector2( 20, 0 )

[node name="Sound" type="AudioStreamPlayer" parent="Anormal"]
stream = ExtResource( 6 )
[connection signal="animation_finished" from="Normal" to="." method="_on_Normal_animation_finished"]
[connection signal="animation_finished" from="Anormal" to="." method="_on_Anormal_animation_finished"]
[connection signal="finished" from="Anormal/Sound" to="." method="_on_Sound_finished"]
